cloudformation/wordpress-ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: WordPress on EC2 + RDS

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
  DBUser:
    Type: String
  DBPassword:
    Type: String
    NoEcho: true
  DBName:
    Type: String
    Default: wordpressdb

Resources:

  WordPressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: !Ref DBName
      Engine: mysql
      MasterUsername: !Ref DBUser
      MasterUserPassword: !Ref DBPassword
      AllocatedStorage: 20
      DBInstanceClass: db.t3.micro
      PubliclyAccessible: false

  WordPressEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref WordPressSecurityGroup
      ImageId: ami-0c02fb55956c7d316 # Amazon Linux 2 (change per region)
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker git
          systemctl start docker
          systemctl enable docker

          # Pull latest WordPress image from ECR if using Jenkins deploy
          docker run -d -p 80:80 \
            -e WORDPRESS_DB_HOST=${RDSInstance.Endpoint.Address} \
            -e WORDPRESS_DB_USER=${DBUser} \
            -e WORDPRESS_DB_PASSWORD=${DBPassword} \
            -e WORDPRESS_DB_NAME=${DBName} \
            wordpress:latest

Outputs:
  ECSiteURL:
    Value: !Sub "http://${WordPressEC2.PublicIp}"
